Moved playlist down to stop gradient overlap

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -189,7 +189,7 @@ body {
 	// 	width:800px;
 	padding:12px 10px 10px 10px;
 	@include position(relative,"","");
-	bottom:155px;
+	bottom:110px;
 	margin:0 auto;
 	width:750px;
 	height:310px;
